overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,9 @@ svg path:first-child {
     max-width: 1400px;
     height: calc(100% - 30px);
     background: rgb(19,28,33);
+    overflow: hidden;
+    box-shadow: 0 0 .5rem rgba(0,0,0,0.4);
+    border-radius: 3px;
 }
 @media screen and (max-width: 1440px) {
     .frame {
